--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include setup.py
 
 recursive-include cppjieba/include/cppjieba *.hpp
 recursive-include cppjieba/dict *.utf8
-recursive-include cppjieba/deps *.h *.cc *.hpp
+recursive-include cppjieba/deps  *.hpp
