--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_install:
 - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 1
 - g++ --version
 install:
-- pip install -e .
+- pip install ".[test]"
 script:
 - nosetests -c nose.cfg
