--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ python:
 - '3.5'
 - '3.6'
 sudo: false
-git:
-  submodules: false
 before_install:
 - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
 - sudo apt-get -y update
@@ -14,6 +12,7 @@ before_install:
 - sudo apt-get -y install g++-5
 - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 1
 - g++ --version
+- git submodule update --init cppjieba
 install:
 - pip install ".[test]"
 script:
