--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,6 @@
 [submodule "pybind11"]
 	path = pybind11
+	active = false
 	url = https://github.com/pybind/pybind11.git
 [submodule "cppjieba"]
 	path = cppjieba
