--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,25 @@
+notifications:
+  email: false
+
+matrix:
+  include:
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
+           PLAT=manylinux1_x86_64
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
+           PRE_CMD=linux32
+           PLAT=manylinux1_i686
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
+           PLAT=manylinux2010_x86_64
+
 language: python
 python:
 - '2.7'
@@ -19,7 +41,11 @@ install:
 - pip install ".[test]"
 script:
 - nosetests -c nose.cfg
+before_deploy:
+- docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh
 deploy:
+  # on:
+  #   tags: true
   provider: pypi
   distributions: sdist bdist_wheel
   user: __token__
