--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ install:
 script:
 - nosetests -c nose.cfg
 before_deploy:
-- docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh
+- docker run --rm -e PLAT=$PLAT -v "$(pwd)":/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh
 deploy:
   # on:
   #   tags: true
