--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,24 @@
 notifications:
   email: false
 
-matrix:
-  include:
-    - sudo: required
-      services:
-        - docker
-      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
-           PLAT=manylinux1_x86_64
-    - sudo: required
-      services:
-        - docker
-      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
-           PRE_CMD=linux32
-           PLAT=manylinux1_i686
-    - sudo: required
-      services:
-        - docker
-      env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
-           PLAT=manylinux2010_x86_64
+# matrix:
+#   include:
+#     - sudo: required
+#       services:
+#         - docker
+#       env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
+#            PLAT=manylinux1_x86_64
+#     - sudo: required
+#       services:
+#         - docker
+#       env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
+#            PRE_CMD=linux32
+#            PLAT=manylinux1_i686
+#     - sudo: required
+#       services:
+#         - docker
+#       env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
+#            PLAT=manylinux2010_x86_64
 
 language: python
 python:
@@ -41,8 +41,8 @@ install:
 - pip install ".[test]"
 script:
 - nosetests -c nose.cfg
-before_deploy:
-- docker run --rm -e PLAT=$PLAT -v "$(pwd)":/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh
+# before_deploy:
+# - docker run --rm -e PLAT=$PLAT -v "$(pwd)":/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh
 deploy:
   # on:
   #   tags: true
