--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,6 +38,12 @@ jobs:
     #- name: Test with pytest
     #  run: |
     #    pytest
+    # Used to host cibuildwheel
+    - uses: actions/setup-python@v5
+
+    - name: Install cibuildwheel
+      run: python -m pip install cibuildwheel==2.22.0
+      
     - name: Build wheel
       run: |
           python -m cibuildwheel --output-dir dist
@@ -47,3 +53,8 @@ jobs:
       with:
           name: wheel
           path: dist/*.whl
+
+#    - uses: actions/upload-artifact@v4
+#      with:
+#          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+#          path: ./wheelhouse/*.whl
