--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,13 +19,14 @@ jobs:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with: 
         submodules: 'recursive'
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
         python-version: ${{ matrix.python-version }}
-    - uses: actions/setup-python@v5
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -43,10 +44,6 @@ jobs:
     # Used to host cibuildwheel
     - name: Install cibuildwheel
       run: python -m pip install cibuildwheel==2.22.0
-    - name: Set environment variables
-      run: |
-        export CPLUS_INCLUDE_PATH=$GITHUB_WORKSPACE/cppjieba/libcppjieba/include:$CPLUS_INCLUDE_PATH
-        export LIBRARY_PATH=$GITHUB_WORKSPACEcppjieba/libcppjieba/submodule/lib:$LIBRARY_PATH
     - name: Build wheel
       run: |
           python -m cibuildwheel --output-dir dist
