--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -43,7 +43,9 @@ jobs:
     #    pytest
     # Used to host cibuildwheel
     - name: Install cibuildwheel
-      run: python -m pip install cibuildwheel==2.22.0
+      run: |
+        python -m pip install cibuildwheel==2.22.0
+        python -m pip install pybind11
     - name: Build wheel
       run: |
           python -m cibuildwheel --output-dir dist
