--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,21 +16,27 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.12"]
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       with: 
         submodules: 'recursive'
+        
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
+        python -m pip install --upgrade setuptools
+        pyhton -m pip install pybind11
+        python -m pip install cibuildwheel==2.22.0
+
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -42,10 +48,6 @@ jobs:
     #  run: |
     #    pytest
     # Used to host cibuildwheel
-    - name: Install cibuildwheel
-      run: |
-        python -m pip install cibuildwheel==2.22.0
-        python -m pip install pybind11
     - name: Build wheel
       run: |
           python -m cibuildwheel --output-dir dist
