--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,7 +34,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         python -m pip install --upgrade setuptools
-        python -m pip install pybind11
+        python -m pip install pybind11 --upgrade
         python -m pip install cibuildwheel==2.22.0
 
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
