--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,13 +10,14 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
+  build_wheels:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.12"]
+        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-13, macos-latest]
 
     steps:
     - name: Checkout code
@@ -32,21 +33,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
         python -m pip install --upgrade setuptools
         python -m pip install pybind11 --upgrade
         python -m pip install cibuildwheel==2.22.0
 
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    #- name: Test with pytest
-    #  run: |
-    #    pytest
     # Used to host cibuildwheel
     - name: Build wheel
       run: |
